fixed the screen and history panel overflow bug

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
   --third-black: #333333;
   --fourth-black: #2b2b2a;
   --text-color: rgb(115, 115, 115);
+  --secondary-text-color: rgb(185, 185, 185);
   /* Whites */
 
   /* Radius */
@@ -86,20 +87,23 @@ nav {
   padding: 4px;
   box-shadow: rgba(51, 51, 52, 0.3) 0px 1px 2px 0px,
     rgba(0, 0, 0, 0.15) 0px 2px 6px 2px;
+  overflow: auto;
 }
 
 .screen-text {
-  color: rgb(185, 185, 185);
-  margin-right: 8px;
+  color: var(--secondary-text-color);
+  overflow: auto;
 }
 
 .screen-container {
   display: flex;
   flex-direction: column;
+  padding-left: 8px;
 }
 
 .prev {
   font-size: 1rem;
+  position: relative;
   opacity: 30%;
   text-align: right;
 }
@@ -107,6 +111,7 @@ nav {
 .active {
   opacity: 80%;
   font-size: 3rem;
+  overflow-x: auto;
 }
 
 /* Calculator Buttons */
@@ -177,6 +182,7 @@ button {
   padding: 8px;
   box-shadow: rgba(107, 108, 109, 0.3) 0px 1px 2px 0px,
     rgba(0, 0, 0, 0.15) 0px 2px 6px 2px;
+  overflow: hidden;
 }
 
 .history-settings {
@@ -194,6 +200,7 @@ button {
   display: flex;
   flex-direction: column;
   padding: 8px;
+  overflow: auto;
 }
 
 .history-clear {
@@ -203,6 +210,8 @@ button {
   width: 100px;
   align-self: self-end;
   padding: var(--radius-border);
+  position: absolute;
+  z-index: 2;
 }
 
 .history-display {
@@ -211,10 +220,22 @@ button {
   border-radius: var(--radius-border);
   flex-direction: column;
   align-items: end;
+  color: var(--secondary-text-color);
   height: 100%;
-  margin-top: 3px;
+  gap: 8px;
+  margin-top: 50px;
   padding: 8px;
   border-radius: var(--radius-border);
+}
+
+.equation {
+  opacity: 30%;
+  font-size: 0.7rem;
+  text-align: right;
+}
+
+.answer {
+  font-size: 1.75rem;
 }
 
 /* Mix */
